# portfolio

./: .gitignore  README.md  format.sh
exercises/: EvenPalindromes.cpp  SleepySort.cpp  newton.cpp  newton.py
notes/: cpp.md  python.py
projects/breakneck/: CMakeLists.txt  Elevator.cpp  Elevator.h  ElevatorBankPanel.cpp  ElevatorBankPanel.h  ElevatorScheduler.cpp  ElevatorScheduler.h  main.cxx
projects/minishell/: Cargo.toml
projects/minishell/src/: main.rs
projects/mlxx/: AST.cpp  AST.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  main.cpp
projects/rtow/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Common.h  Hittable.h  HittableList.cpp  HittableList.h  Material.cpp  Material.h  Ray.h  Sphere.cpp  Sphere.h  ThreadPool.cpp  ThreadPool.h  Vec3.h  main.cpp
projects/ttc/: CMakeLists.txt  Emitter.cpp  Emitter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Util.cpp  Util.h  main.cpp
starters/cxx/: CMakeLists.txt  main_gtk.cpp  main_qt.cpp  main_qt.h  meson.build
